--- a/0x00-Webpack/task_1/public/index.html
+++ b/0x00-Webpack/task_1/public/index.html
@@ -8,6 +8,6 @@
 <body>
     <button id="myButton">Click Me!</button>
     <p id="count">0 clicks on the button</p>
-    <script src="../src/index.js"></script>
+    <script src="bundle.js"></script>
 </body>
 </html>
