--- a/0x00-Webpack/task_2/public/index.html
+++ b/0x00-Webpack/task_2/public/index.html
@@ -3,11 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Counter Example</title>
+    <title>Webpack Task 2</title>
 </head>
 <body>
-    <button id="myButton">Click Me!</button>
-    <p id="count">0 clicks on the button</p>
+    <div id="logo"></div>
     <script src="bundle.js"></script>
 </body>
 </html>
